tests/snapshots/snapshot__fixtures@m16__constructions.sas.snap
---
source: sas_interpreter/tests/snapshot.rs
assertion_line: 28
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: sas_interpreter/tests/fixtures/m16/constructions.sas
---
==== LOG ====

1     data work.select_test;
2       do val = 1, 2, 3, 5, 10;
3         select(val);
4           when(1, 2, 3) grade = 'low';
5           when(5) grade = 'mid';
6           otherwise grade = 'high';
7         end;
8         output;
9       end;
10    run;
NOTE: The data set WORK.SELECT_TEST has 5 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

11    data work.array_test;
12      array matrix{2, 3} (1, 2, 3, 4, 5, 6);  /* 2x3 with initial values */
13      array names{3} $10 _temporary_;
14      names{1} = 'Alice';
15      names{2} = 'Bob';
16      names{3} = 'Carol';
17    
18      /* Test DIM, HBOUND, LBOUND */
19      dims = dim(matrix);
20      h1 = hbound(matrix, 1);
21      h2 = hbound(matrix, 2);
22      l1 = lbound(matrix, 1);
23    
24      /* Access multi-D element */
25      elem_2_2 = matrix{2, 2};
26    
27      output;
28    run;
NOTE: The data set WORK.ARRAY_TEST has 1 observations and 11 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

29    data work.do_test;
30      retain date_var 21710d;  /* 2020-01-01 */
31    
32      array nums{3} n1-n3;
33      n1 = 10; n2 = 20; n3 = 30;
34    
35      do over nums;
36        nums = nums * 2;  /* Double each element */
37      end;
38    
39      /* DO with explicit value list */
40      do i = 1, 3, 5, 7;
41        output;
42      end;
43    run;
NOTE: The data set WORK.DO_TEST has 4 observations and 5 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

44    data work.set_test;
45      set work.select_test(rename=(val=id)) end=eof nobs=n;
46      obs_num = _n_;
47      is_last = eof;
48      total = n;
49      output;
50    run;
NOTE: There were 5 observations read from the data set WORK.SELECT_TEST.
NOTE: The data set WORK.SET_TEST has 5 observations and 6 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

51    data work.master;
52      input id val;
53      datalines;
54    1 100
55    2 200
56    3 300
57    ;
58    run;
NOTE: The data set WORK.MASTER has 3 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

59    data work.trans;
60      input id newval;
61      datalines;
62    1 150
63    3 350
64    ;
65    run;
NOTE: The data set WORK.TRANS has 2 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

66    data work.updated;
67      update work.master work.trans key=id;
68      output;
69    run;
NOTE: There were 3 observations read from the data set WORK.MASTER.
NOTE: There were 2 observations read from the data set WORK.TRANS.
NOTE: The data set WORK.UPDATED has 3 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

70    data work.control_test;
71      retain _all_;  /* Retain all variables */
72      input x;
73    
74      link calc;
75      goto skip_error;
76    
77      error_section: y = -1;
78    
79      skip_error:
80      output;
81      stop;
82    
83      calc: y = x * 2; return;
84    
85      datalines;
86    5
87    10
88    15
89    ;
90    run;
NOTE: The data set WORK.CONTROL_TEST has 1 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

91    title 'M16 Constructions — SELECT, Arrays, DO OVER, SET Options, UPDATE, LINK/GOTO';

92    proc print data=work.control_test;
93    run;
NOTE: There were 1 observations read from the data set WORK.CONTROL_TEST.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
        M16 Constructions â SELECT, Arrays, DO OVER, SET Options, UPDATE, LINK/GOTO

                                         Obs    x     y

                                           1    5    10

==== EXIT 0 ====
